syntax = "proto3";

package rs.ac.uns.ftn.grpc;
option csharp_namespace = "FlightsBooking.Grpc.Protos";


message GetAllSuggestedFlightsMessageProto {
    string placeOfDeparture = 1;
	string firstDayDate = 2;
	string placeOfArrival = 3;
	string lastDayDate = 4;
}

message GetAllSuggestedFlightsMessageProtoResponse {
  string flightsForGoing = 1;
  string flightsForReturning = 2;
}

message BookFlightMessageProto {
    string flightId = 1;
	string userId = 2;
	string numberOfTickets = 3;
}

message BookFlightMessageProtoResponse {
  string isBooked = 1;
}